# CS214

./: .gitignore  README.md
Notes/Basics/: CMakeLists.txt  ExamDetails.txt  Notes.txt  basicHeader.h  main.c
Notes/CodeLibraries/: CMakeLists.txt  Makefile  main.c  plusOne.c  plusTwo.c
Notes/CodeLibraries/include/: plusOne.h  plusTwo.h
Notes/IO/: CMakeLists.txt  Makefile  main.c  test.c
Notes/Interrupts/: CMakeLists.txt  main.c
Notes/Lec2/: CMakeLists.txt  main.c
Notes/Networking/: CMakeLists.txt  Makefile  main.c
Notes/Pointers/: CMakeLists.txt  main.c
Notes/ProcessesAndThreads/: CMakeLists.txt  main.c
Notes/RunningCode/: CMakeLists.txt  main.c
Notes/StringsTypesEnum/: CMakeLists.txt
Notes/filePermissionsCreation/: CMakeLists.txt  Makefile  main.c
Projects/Assignment0/: CMakeLists.txt  Makefile  basicletters.txt  comma.txt  comma.txt.txt  empty.txt  empty.txt.txt  error.c  filesort.c  number.txt  over100.txt  testcase.txt  testcase0.txt  testplan.txt
Projects/Assignment1/: Asst1.tgz  CMakeLists.txt  Makefile  fileCompressor.c  testplan.txt  tobeoptimized.c
Projects/Assignment1/recursivetest1/: test1.txt.hcz  test2.txt.hcz
Projects/Assignment1/recursivetest2/: asd.txt  asd.txt.hcz
Projects/Assignment1/recursivetest3/: test3.txt  test3.txt.hcz
Projects/Assignment1/simplerecursivetest/: test.txt  test.txt.hcz
Projects/Assignment3/: Asst3.tgz  CMakeLists.txt  Make Test  Makefile  MakefileTest  WTFtest.c  client.c  server.c  testcases.txt  testplan.txt
Projects/Assignment3/Asst3/: testcases.txt
(+28 files in other folders)
